# nbody

./: Cargo.toml  README.md  simulate_and_view.sh
data/: README.md  binary_stars.ini  earth_moon.ini  ic.ini  results.csv  results_binary.csv  results_earth_moon.csv  sun_jupiter_saturn.ini
src/: Body.rs  body.rs  config.rs  files.rs  integrator.rs  lib.rs  main.rs  physics.rs  simulator.rs  trajectory.rs
